--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Released   : 20080125
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>Nature's Charm by Free CSS Templates</title>
+<title>Radom</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" media="screen" />
@@ -102,7 +102,7 @@ Released   : 20080125
 <div style="clear: both; height: 30px">&nbsp;</div>
 <!-- end page -->
 <div id="footer">
-	<p>&copy;2007 All Rights Reserved. &nbsp;&bull;&nbsp; Designed by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a></p>
+	<p>&copy;2007 All Rights Reserved. &nbsp;&bull;&nbsp; Designed by <a href="http://www.fourierxue.github.io">Free CSS Templates</a></p>
 </div>
 </body>
 </html>
