--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@ Released   : 20080125
 <!-- start header -->
 <div id="header">
 	<div id="logo">
-		<h1><a href="#">nature's charm </a></h1>
-		<h2><a href="http://www.freecsstemplates.org/">By Free CSS Templates</a></h2>
+		<h1><a href="#">Radon's home</a></h1>
 	</div>
 	<div id="menu">
 		<ul>
@@ -102,7 +101,7 @@ Released   : 20080125
 <div style="clear: both; height: 30px">&nbsp;</div>
 <!-- end page -->
 <div id="footer">
-	<p>&copy;2007 All Rights Reserved. &nbsp;&bull;&nbsp; Designed by <a href="http://www.fourierxue.github.io">Free CSS Templates</a></p>
+	<p>&copy;2007 All Rights Reserved. &nbsp;&bull;&nbsp; <a href="http://freecsstemplates.org/">模板来源</a></p>
 </div>
 </body>
 </html>
