--- a/git.html
+++ b/git.html
@@ -39,7 +39,7 @@ git pull 失败 ,提示：fatal: refusing to merge unrelated histories
 git pull origin master --allow-unrelated-histories
 后面加上 --allow-unrelated-histories ， 把两段不相干的 分支进行强行合并
 后面再push就可以了。
-本地必须要先add ，commit完了 才能推上去
+本地必须要先add ，commit完了 才能push上去
 </p>
 
 <p>
