--- a/实习.html
+++ b/实习.html
@@ -1,11 +1,26 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<link rel="Stylesheet" type="text/css" href="style.css">
-<title>实习</title>
+<link rel="Stylesheet" type="text/css" href="static/default.css" media="screen">
+<title>Radon</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
+<!-- start header -->
+<div id="header">
+	<div id="logo">
+		<h1><a href="#">Radon's home</a></h1>
+	</div>
+	<div id="menu">
+		<ul>
+			<li class="active"><a href="index.html" accesskey="1" title="">Home</a></li>
+			<li><a href="学习.html" accesskey="2" title="">Blog</a></li>
+			<li><a href="todo.html" accesskey="3" title="">todo</a></li>
+			<li><a href="书单.html" accesskey="4" title="">书单</a></li>
+			<li><a href="diary/2019-03-26.html" accesskey="5" title="">diary</a></li>
+		</ul>
+	</div>
+</div>
 
 <ul>
 <li class="done0">
