--- a/阿金八个问题以及研究方向.html
+++ b/阿金八个问题以及研究方向.html
@@ -1,11 +1,26 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<link rel="Stylesheet" type="text/css" href="style.css">
-<title>阿金八个问题以及研究方向</title>
+<link rel="Stylesheet" type="text/css" href="static/default.css" media="screen">
+<title>Radon</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
+<!-- start header -->
+<div id="header">
+	<div id="logo">
+		<h1><a href="#">Radon's home</a></h1>
+	</div>
+	<div id="menu">
+		<ul>
+			<li class="active"><a href="index.html" accesskey="1" title="">Home</a></li>
+			<li><a href="学习.html" accesskey="2" title="">Blog</a></li>
+			<li><a href="todo.html" accesskey="3" title="">todo</a></li>
+			<li><a href="书单.html" accesskey="4" title="">书单</a></li>
+			<li><a href="diary/2019-03-26.html" accesskey="5" title="">diary</a></li>
+		</ul>
+	</div>
+</div>
 
 <p>
 选题与文本结合要紧密
@@ -38,6 +53,16 @@
 自爱的放荡 ” ,其实在封建 的 “贞节 ”观面前 ,在男权主宰 的世界
 里 ,女性的 “放荡 ”即 “革命 ” , “放荡 ”这个词本身就表征着一种男
 权话语 ,这是男人对女性的一种 “有理的压迫 ”。。
+</p>
+
+<p>
+阿金与子君的比较？
+在鲁迅笔下的女性中,子君无疑是一位解放了的新女性,一位典型的“五四的女儿”,她敢于冲决礼教的围栏,和涓生一起为了爱情和整个社会对抗。但是,子君最后却为她所追寻的爱情所吞噬。这里隐含着启蒙的悖论,子君虽然在爱情道德上跨出了一大步,却仍然依附于启蒙者男性,与世隔绝,除了爱情什么都可以不要。当爱情破灭时,子君在“父亲烈日一般的严威和旁人的赛过冰霜的冷眼”中去世而阿金是生活在底层的小市民,她没有“启蒙运动”所造就的新的神圣价值体系—爱情神话的蛊惑和羁绊,沉溺在世俗的日常琐事中,自食其力。她交际广泛,“她有许多的女朋友,天一晚,就陆续到她窗下来”,这里我们并不认为没有明确的爱情观就比有爱情观要高明,而是认为前者更会融人世俗生活。毕竟,正如鲁迅所说,生存,是第一要著。有许多学者分析过《伤逝》中启蒙的困境,子君和涓生是被启蒙和启蒙、学生和导师的关系,子君的觉悟缺乏自主性,同时,“五四”式的启蒙是个人主义的维度,女性启蒙强调的是与男人平等的权利,许多情况下,只是指“爱”的权利。那么阿金这个人物对这种启蒙困境是一个解构,爱的权利对她来说不构成问题。当然阿金也仍然是待启蒙、待革命的对象,在年代的中国,这种启蒙可能是一种阶级的启蒙。阿金虽然有着开放的爱情观,但却无法对自己的社会地位、阶级地位产生觉悟。她可能从没有考虑过姨太太和姨娘 同为女人为什么后者要给前者做仆人。她的快乐和“轧妍头”,从这个角度上看,说是愚昧也不过分。所以,在阿金这个人物身上,体现了“人的启蒙”和“阶级的启蒙”的复杂变奏。
+</p>
+
+<p>
+阿金与子君的比较？
+在鲁迅笔下的女性中,子君无疑是一位解放了的新女性,一位典型的“五四的女儿”,她敢于冲决礼教的围栏,和涓生一起为了爱情和整个社会对抗。但是,子君最后却为她所追寻的爱情所吞噬。子君虽然在爱情道德上跨出了一大步,却与世隔绝,除了爱情什么都可以不要。当爱情破灭时,子君在“父亲烈日一般的严威和旁人的赛过冰霜的冷眼”中去世，而阿金是生活在底层的小市民,她没有“启蒙运动”所造就的新的神圣价值体系—爱情神话的蛊惑和羁绊,沉溺在世俗的日常琐事中,自食其力。她交际广泛,“她有许多的女朋友,天一晚,就陆续到她窗下来”,我并不认为没有明确的爱情观就比有爱情观要高明,而是认为前者更会融人世俗生活。毕竟,正如鲁迅所说,生存,是第一要著。
 </p>
 
 </body>
