--- a/阿金八个问题以及研究方向.html
+++ b/阿金八个问题以及研究方向.html
@@ -65,5 +65,14 @@
 在鲁迅笔下的女性中,子君无疑是一位解放了的新女性,一位典型的“五四的女儿”,她敢于冲决礼教的围栏,和涓生一起为了爱情和整个社会对抗。但是,子君最后却为她所追寻的爱情所吞噬。子君虽然在爱情道德上跨出了一大步,却与世隔绝,除了爱情什么都可以不要。当爱情破灭时,子君在“父亲烈日一般的严威和旁人的赛过冰霜的冷眼”中去世，而阿金是生活在底层的小市民,她没有“启蒙运动”所造就的新的神圣价值体系—爱情神话的蛊惑和羁绊,沉溺在世俗的日常琐事中,自食其力。她交际广泛,“她有许多的女朋友,天一晚,就陆续到她窗下来”,我并不认为没有明确的爱情观就比有爱情观要高明,而是认为前者更会融人世俗生活。毕竟,正如鲁迅所说,生存,是第一要著。
 </p>
 
+<p>
+鲁迅在阿金中思考的问题：女性的道路 中国革命的主体 
+</p>
+
+<p>
+农耕社会更符合男性 城市的生活和女性比较契合
+农耕社会，读书人是权力阶层；在城市中，读书人再也没有更高的地位。
+</p>
+
 </body>
 </html>
