毕业论文思路

--- a/毕业论文.html
+++ b/毕业论文.html
@@ -22,32 +22,10 @@
 	</div>
 </div>
 
-<ul>
-<li class="done0">
-文化素质教育八张听课表和两篇一千五百字以上读书报告
-
-<li class="done0">
-srtp
-
-<li class="done0">
-<a href="毕业论文.html">毕业论文</a>
-
-</ul>
-
-<ul>
-<li class="done4">
-srtp讲座论文 4.15
-
-<li class="done0">
-<a href="阿金八个问题以及研究方向.html">阿金八个问题以及研究方向</a> 4.16
-
-<li class="done4">
-srtp讲座论文 4.18
-
-<li class="done0">
-周报
-
-</ul>
+<p>
+列举介绍所有的代码生成技术，最后着重介绍基于模板的代码生成技术
+技术难点主要写一下freemarker的模板的具体写法，比如通过使用list来解决形参数目不定的问题，通过if解决最后的形参后不加逗号的问题，通过assign解决不知道主键字段个数的问题
+</p>
 
 </body>
 </html>
