--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 
 <p>
 <a href="todo.html">todo</a>
-<a href="影评.html">影评</a>
+<a href="电影.html">电影</a>
 <a href="工作经历.html">工作经历</a>
 <a href="学习.html">学习</a>
 <a href="书单.html">书单</a>
 </p>
+
 </body>
 </html>
